--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
             <span>Cameron Swift</span>
           </div>
           <p class="about-date">Posted: 07/05/2020</p>
-          <h3 class="about-title">Becoming a web developer</h3>
+          <h3 class="about-title">Who am I?</h3>
             <div class="about-content">
               <p>Hi there! I'm an aspiring cyber security analyst aiming to learn key aspects of web development.</p>
               <p>If you like my blog, please follow me on Facebook or Twitter. If you want to get in touch, click on the contact link in the navigation bar.</p>
