added aboutme page and picture

--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
     <div class="outer-div">
         <div class="header-div">
             <a href="index.html" class="home-button"><h1 class="header-p">Cameron Swift</h1></a>
-            <a href="index.html"><img src="fox.png"></a>
+            <a href="index.html"><img id="fox" src="fox.png"></a>
         </div>
         <div class="nav-div">
             <nav>
@@ -18,10 +18,15 @@
             </nav>
         </div>
         <div class="main-div">
-            <p>Hello! Welcome to my website, please explore the links above.</p>
+            <h3>About Me:</h3>
+            <p>Hello! I'm Cameron Swift and I am an aspiring Cyber Security Analyst.</p>
+            <p>I'm currently going onto my third year of study at Liverpool John Moores University.</p>
+            <p>The degree I'm studying is BSc (Hons) Computer Security and I am on target for a First Class Honours.</p>
+            <a href="https://www.linkedin.com/in/cameron-swift/"><img id="me" src="me-portrait.jpg"></a>
         </div>
         <div class="footer-div">
             <p class="copyright">© Cameron Swift 2020</p>
         </div>   
     </div>
 </body>
+</html>
