--- a/job-skills.html
+++ b/job-skills.html
@@ -8,7 +8,7 @@
     <div class="outer-div">
         <div class="header-div">
             <a href="index.html" class="home-button"><h1 class="header-p">Cameron Swift</h1></a>
-            <a href="index.html"><img src="fox.png"></a>
+            <a href="index.html"><img id="fox" src="fox.png"></a>
         </div>
         <div class="nav-div">
             <nav>
@@ -30,7 +30,7 @@
                         handling all queries from residents and visitors. During office out-of-hours shifts, I was placed in charge of the whole
                         building, meaning I handled leaks, fire alarm system and electrical problems. I also attended Student events as a Brand
                         Ambassador.
-                        Qualities gained/ improved from this experience:
+                        Qualities gained/improved from this experience:
                         <li>Certificates for First Aid, Fire Safety, Data Protection and Electrical Safety.</li>
                         <li>Remaining calm under serious situations such as a fire/major leakage.</li>
                         <li>Communicating with and solving tenants' problems.</li>
