--- a/tech.html
+++ b/tech.html
@@ -8,7 +8,7 @@
     <div class="outer-div">
         <div class="header-div">
             <a href="index.html" class="home-button"><h1 class="header-p">Cameron Swift</h1></a>
-            <a href="index.html"><img src="fox.png"></a>
+            <a href="index.html"><img id="fox" src="fox.png"></a>
         </div>
         <div class="nav-div">
             <nav>
@@ -23,7 +23,12 @@
                 <ul>
                     <li class="tech-li">Experience with Object-Oriented Programming (Java)</li>
                     <li class="tech-li">Designing and maintaining a database base from scratch (SQL)</li>
-                    <li class="tech-li">Using Apache to host a website which stores data in a live database using PHP (MariaDB/PHP)</li>
+                    <li class="tech-li">Storing user form input in a live database (MariaDB/PHP)</li>
+                    <li class="tech-li">Ability to use HTML & CSS to create a responsive web page.</li>
+                    <li class="tech-li">Building a computer and maintaining the hardware.</li>
+                    <li class="tech-li">Familiarity with multiple Linux distributions (Bash)</li>
+                    <li class="tech-li">Writing shell-scripts to automate minor processes. (Bash)</li>
+                    <li class="tech-li">3 years experience with version control systems (Git)</li>
                 </ul>
             </div>
         </div>
