--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <div class="outer-div">
             <div class="header-div">
                 <a href="index.html" class="home-button"><h1 class="header-p">Cameron Swift</h1></a>
-                <a href="index.html"><img src="fox.png"></a>
+                <a href="index.html"><img id="fox" src="fox.png"></a>
             </div>
             <div class="nav-div">
                 <nav>
