updated tech skills list

--- a/tech.html
+++ b/tech.html
@@ -29,6 +29,7 @@
                     <li class="tech-li">Familiarity with multiple Linux distributions (Bash)</li>
                     <li class="tech-li">Writing shell-scripts to automate minor processes. (Bash)</li>
                     <li class="tech-li">3 years experience with version control systems (Git)</li>
+                    <li class="tech-li">Penetration testing VMs using Kali Linux tools (Metasploit/BurpSuite)</li>
                 </ul>
             </div>
         </div>
