--- a/job-skills.html
+++ b/job-skills.html
@@ -30,11 +30,11 @@
                         handling all queries from residents and visitors. During office out-of-hours shifts, I was placed in charge of the whole
                         building, meaning I handled leaks, fire alarm system and electrical problems. I also attended Student events as a Brand
                         Ambassador.-->
-                        Qualities gained/improved from this experience:
+                        <p>Qualities gained/improved from this experience:
                         <li>Certificates for First Aid, Fire Safety, Data Protection and Electrical Safety.</li>
                         <li>Remaining calm under serious situations such as a fire/major leakage.</li>
                         <li>Communicating with and solving tenants' problems.</li>
-                        <li>Brand Ambassador skills.</li><!-- </p> -->
+                            <li>Brand Ambassador skills.</li></p>   <!-- </p> -->
                     </div>
                 </div><br><br>
                 <div class="job">
@@ -43,11 +43,11 @@
                     <!-- <p>I have previously been an employee for a company named Chums Ltd. It was my responsibility to handle incoming call
                         orders, due to the fact that I'm a quick learner, the task came naturally and I was able to excel
                         in providing aid to people. I learnt how to check stock and know when an item is due for delivery. With this job, I was grateful to have learnt a lot, especially the ability to communicate with customers in a friendly manner no matter the task at hand.
-                    --> Qualities gained from this work experience:
+                    --> <p>Qualities gained from this work experience:
                         <li>Witty and careful when dealing with problems.</li>
                         <li>Excellent ability of handling different types of situations under delicate circumstances.</li>
                         <li>Keeping check of stock and anticipating when stock will run out.</li>
-                        <li>Improved communication skills with staff and customers.</li> <!-- </p> -->
+                        <li>Improved communication skills with staff and customers.</li></p> <!-- </p> -->
                     </div>
                 </div><br><br>
                 <div class="job">
