improved how jobs reads

--- a/job-skills.html
+++ b/job-skills.html
@@ -34,7 +34,9 @@
                         <li>Certificates for First Aid, Fire Safety, Data Protection and Electrical Safety.</li>
                         <li>Remaining calm under serious situations such as a fire/major leakage.</li>
                         <li>Communicating with and solving tenants' problems.</li>
-                            <li>Brand Ambassador skills.</li></p>   <!-- </p> -->
+                        <li>Brand Ambassador skills.</li>
+                        <li>Ensuring COVID-19 Procedures were followed.</li>
+                        <li>Cash handling</li></p>   <!-- </p> -->
                     </div>
                 </div><br><br>
                 <div class="job">
@@ -45,8 +47,8 @@
                         in providing aid to people. I learnt how to check stock and know when an item is due for delivery. With this job, I was grateful to have learnt a lot, especially the ability to communicate with customers in a friendly manner no matter the task at hand.
                     --> <p>Qualities gained from this work experience:
                         <li>Witty and careful when dealing with problems.</li>
-                        <li>Excellent ability of handling different types of situations under delicate circumstances.</li>
-                        <li>Keeping check of stock and anticipating when stock will run out.</li>
+                        <li>Maintaining composure & de-escalating situations in which the customer was frustrated.</li>
+                        <li>Keeping track of stock and anticipating when stock will run out.</li>
                         <li>Improved communication skills with staff and customers.</li></p> <!-- </p> -->
                     </div>
                 </div><br><br>
@@ -55,10 +57,9 @@
                     <div class="dropdown-content">
                     <p>
                         Qualities gained/improved from this experience:
-                        <li>The safety of children.</li>
-                        <li>Planning lessons for classrooms.</li>
+                        <li>Creatively designing and planning of lessons.</li>
                         <li>Assisting in the teaching of children.</li>
-                        <li>Experience with common office equipment.</li>
+                        <li>Organising and managing files containing personal information.</li>
                     </p>
                     </div>
                 </div>
