--- a/job-skills.html
+++ b/job-skills.html
@@ -36,7 +36,7 @@
                         <li>Communicating with and solving tenants' problems.</li>
                         <li>Brand Ambassador skills.</li>
                         <li>Ensuring COVID-19 Procedures were followed.</li>
-                        <li>Cash handling</li></p>   <!-- </p> -->
+                        <li>Cash handling.</li></p>   <!-- </p> -->
                     </div>
                 </div><br><br>
                 <div class="job">
