--- a/tech.html
+++ b/tech.html
@@ -30,6 +30,7 @@
                     <li class="tech-li">Writing shell-scripts to automate minor processes. (Bash)</li>
                     <li class="tech-li">3 years experience with version control systems (Git)</li>
                     <li class="tech-li">Penetration testing VMs using Kali Linux tools (Metasploit/BurpSuite)</li>
+                    <li class="tech-li">Excellent office software skills (Word/Excel/Access/Outlook/Teams)</li>
                 </ul>
             </div>
         </div>
