--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,7 @@
         <div class="main-div">
             <h3>About Me:</h3>
             <p>Hello! I'm Cameron Swift and I am an aspiring Cyber Security Analyst.</p>
-            <p>I'm currently going onto my third year of study at Liverpool John Moores University.</p>
+            <p>I'm currently on my third year of study at Liverpool John Moores University.</p>
             <p>The degree I'm studying is BSc (Hons) Computer Security and I am on target for a First Class Honours.</p>
             <a href="https://www.linkedin.com/in/cameron-swift/"><img id="me" src="me-portrait.jpg"></a>
         </div>
