--- a/tech.html
+++ b/tech.html
@@ -22,7 +22,7 @@
                 <h3>Technical Abilities:</h3>
                 <ul>
                     <li class="tech-li">Experience with Object-Oriented Programming (Java)</li>
-                    <li class="tech-li">Designing and maintaining a database base from scratch (SQL)</li>
+                    <li class="tech-li">Designing and maintaining a database from scratch (SQL)</li>
                     <li class="tech-li">Storing user form input in a live database (MariaDB/PHP)</li>
                     <li class="tech-li">Ability to use HTML & CSS to create a responsive web page.</li>
                     <li class="tech-li">Building a computer and maintaining the hardware.</li>
