--- a/tech.html
+++ b/tech.html
@@ -24,10 +24,10 @@
                     <li class="tech-li">Experience with Object-Oriented Programming (Java)</li>
                     <li class="tech-li">Designing and maintaining a database from scratch (SQL)</li>
                     <li class="tech-li">Storing user form input in a live database (MariaDB/PHP)</li>
-                    <li class="tech-li">Ability to use HTML & CSS to create a responsive web page.</li>
-                    <li class="tech-li">Building a computer and maintaining the hardware.</li>
+                    <li class="tech-li">Ability to use HTML & CSS to create a responsive web page</li>
+                    <li class="tech-li">Building a computer and maintaining the hardware</li>
                     <li class="tech-li">Familiarity with multiple Linux distributions (Bash)</li>
-                    <li class="tech-li">Writing shell-scripts to automate minor processes. (Bash)</li>
+                    <li class="tech-li">Writing shell-scripts to automate minor processes (Bash)</li>
                     <li class="tech-li">3 years experience with version control systems (Git)</li>
                     <li class="tech-li">Penetration testing VMs using Kali Linux tools (Metasploit/BurpSuite)</li>
                     <li class="tech-li">Excellent office software skills (Word/Excel/Access/Outlook/Teams)</li>
